desktop and mobile layouts are done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- TODO: header's onscroll event -->
-    <header class="header header-expand-sm static">
+    <header class="header header-expand-sm static elevation-1">
       <div class="container-fluid">
         <a class="header__logo" href="#">
           <img src="./images/logo.png" alt="Logo" />
@@ -49,7 +49,7 @@
               <span class="font-size-large">請再關注我們的優惠時間</span>
             </div>
           </div>
-          <div class="col fixed-size order-xs-1 mt-0">
+          <div class="col-12 col-sm-6 order-xs-1 mt-0">
             <div class="block flex flex-column bg-secondary color-white px-5">
               <div class="stepper-upper-text">
                 <div class="font-size-small left-0"></div>
@@ -99,14 +99,14 @@
       </div>
     </section>
     <!-- learn more #1 -->
-    <section class="section-learn-more pt-5 pb-6">
+    <section class="section-learn-more py-6">
       <div class="container position-relative px-0">
         <div class="row section-learn-more__row-1 px-3">
-          <div class="col col-md-6">
-            <h2 class="display-h1 color-primary">
+          <div class="col col-md-6 pl-4">
+            <h2 class="color-primary mt-1">
               轉職？成為前端工程師？挑戰自我？三個願望一次滿足！
             </h2>
-            <p class="font-size-large mt-4">
+            <p class="font-size-large mt-4 mb-5">
               我們的學員來自獸醫、咖啡師、圖像設計師等不同背景
               <br />
               他們克服心中的恐懼，冒著最後有可能一無所有的風險
@@ -132,11 +132,11 @@
             </button>
           </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-6">
           <div class="col flex justify-center items-center">
             <button
               type="button"
-              class="button bg-primary color-white font-size-largest px-5"
+              class="button bg-primary color-white font-size-larger px-5"
             >
               我想了解更多≫
             </button>
@@ -145,11 +145,11 @@
       </div>
     </section>
     <!-- steps -->
-    <section class="section-steps pt-5 pb-6">
-      <div class="container-fluid">
+    <section class="section-steps py-6">
+      <div class="container">
         <div class="row mb-4">
           <div class="col flex justify-center items-center px-3">
-            <span class="bg-white color-primary font-size-large px-3 py-3">
+            <span class="display-h3 bg-white color-primary px-3 py-3">
               想要培養一技之長，成為前端工程師嗎？
             </span>
           </div>
@@ -361,11 +361,11 @@
             </p>
           </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-6">
           <div class="col flex justify-center items-center">
             <button
               type="button"
-              class="button bg-white color-primary font-size-largest px-5"
+              class="button bg-white color-primary font-size-larger px-5"
             >
               我有興趣≫
             </button>
@@ -374,39 +374,45 @@
       </div>
     </section>
     <!-- result -->
-    <section class="section-result pt-5 pb-6">
+    <section class="section-result py-6">
       <div class="container">
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h2 class="color-black px-4 py-3">培訓成果</h2>
+            <h2 class="color-black px-4">培訓成果</h2>
           </div>
         </div>
         <div class="row justify-center items-center">
-          <div class="col-12 col-sm-4 text-center mb-4">
-            <p>
-              <strong class="color-primary font-size-largest">159</strong>
-              人
-            </p>
-            <p>結訓校友</p>
+          <div class="col-12 col-sm-4 text-center mb-4 px-4">
+            <div class="py-4 elevation-2">
+              <p>
+                <strong class="color-primary font-size-largest">159</strong>
+                人
+              </p>
+              <p>結訓校友</p>
+            </div>
           </div>
-          <div class="col-12 col-sm-4 text-center mb-4">
-            <p>
-              <strong class="color-primary font-size-largest">85</strong>
-              %
-            </p>
-            <p>成功轉職率</p>
+          <div class="col-12 col-sm-4 text-center mb-4 px-4">
+            <div class="py-4 elevation-2">
+              <p>
+                <strong class="color-primary font-size-largest">85</strong>
+                %
+              </p>
+              <p>成功轉職率</p>
+            </div>
           </div>
-          <div class="col-12 col-sm-4 text-center mb-4">
-            <p>
-              <strong class="color-primary font-size-largest">90</strong>
-              %
-            </p>
-            <p>成為前端工程師</p>
+          <div class="col-12 col-sm-4 text-center mb-4 px-4">
+            <div class="py-4 elevation-2">
+              <p>
+                <strong class="color-primary font-size-largest">90</strong>
+                %
+              </p>
+              <p>成為前端工程師</p>
+            </div>
           </div>
         </div>
         <div class="row mb-4">
-          <div class="col px-3 text-center">
-            <table class="table table-bordered table-hover">
+          <div class="col-12 text-center px-4">
+            <table class="table table-bordered table-striped table-hover">
               <thead>
                 <tr>
                   <th></th>
@@ -460,7 +466,7 @@
           <div class="col flex justify-center items-center">
             <button
               type="button"
-              class="button bg-primary color-white font-size-largest px-5"
+              class="button bg-primary color-white font-size-larger px-5"
             >
               我想了解更多≫
             </button>
