deaktop header scrolling machanism

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- TODO: header's onscroll event -->
-    <header class="header header-expand-sm static elevation-1">
+    <header id="Header" class="header header-expand-sm static elevation-1">
       <div class="container-fluid">
         <a class="header__logo" href="#">
           <img src="./images/logo.png" alt="Logo" />
@@ -24,9 +24,9 @@
         </button>
         <div class="collapse header-collapse">
           <nav class="header__nav">
-            <a class="button button-link" href="#">挑戰自我</a>
-            <a class="button button-link" href="#">課程說明</a>
-            <a class="button button-link" href="#">培訓成果</a>
+            <a class="button button-link" href="#Challenge">挑戰自我</a>
+            <a class="button button-link" href="#Courses">課程說明</a>
+            <a class="button button-link" href="#Results">培訓成果</a>
           </nav>
         </div>
       </div>
@@ -99,7 +99,7 @@
       </div>
     </section>
     <!-- learn more #1 -->
-    <section class="section-learn-more py-6">
+    <section id="Challenge" class="section-learn-more py-6">
       <div class="container position-relative px-0">
         <div class="row section-learn-more__row-1 px-3">
           <div class="col col-md-6 pl-4">
@@ -145,7 +145,7 @@
       </div>
     </section>
     <!-- steps -->
-    <section class="section-steps py-6">
+    <section id="Courses" class="section-steps py-6">
       <div class="container">
         <div class="row mb-4">
           <div class="col flex justify-center items-center px-3">
@@ -374,7 +374,7 @@
       </div>
     </section>
     <!-- result -->
-    <section class="section-result py-6">
+    <section id="Results" class="section-result py-6">
       <div class="container">
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
