--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     </header>
     <!-- landing -->
     <section class="section-landing flex justify-center items-center">
+      <div class="slider">
+        <div class="slide active" data-slide="0"></div>
+        <div class="slide" data-slide="1"></div>
+        <div class="slide" data-slide="2"></div>
+        <div class="slide" data-slide="3"></div>
+      </div>
       <div class="jumbo flex flex-col justify-center items-center">
         <span class="display-h2">F2E 前端開發</span>
         <h1>前端工程師排版試題</h1>
