--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
       <div class="container px-0">
         <div class="row no-gutters">
           <div class="col-6 col-sm-3 mt-0">
-            <div class="block bg-primary color-white text-center">
+            <div id="BlockOne" class="block bg-primary color-white text-center">
               <span class="font-size-larger">優惠活動結束</span>
               <span class="font-size-large">請再關注我們的優惠時間</span>
             </div>
           </div>
           <div class="col-12 col-sm-6 order-xs-1 mt-0">
-            <div class="block flex flex-column bg-secondary color-white px-5">
+            <div id="BlockTwo" class="block flex flex-column bg-secondary color-white px-5">
               <div class="stepper-upper-text">
                 <div class="font-size-small left-0"></div>
                 <div class="font-size-small left-34">達34人</div>
@@ -62,7 +62,6 @@
                 <div class="font-size-small left-100">達100人</div>
               </div>
               <div class="stepper">
-                <!-- TODO: width = total progress % -->
                 <div
                   class="stepper-bar"
                   role="progressbar"
@@ -85,7 +84,7 @@
             </div>
           </div>
           <div class="col-6 col-sm-3 mt-0">
-            <div class="block bg-purple color-white pt-2">
+            <div id="BlockThree" class="block bg-purple color-white pt-2">
               <span class="font-size-large">
                 已有
                 <strong id="SignedupCount" class="font-size-largest">70</strong>
