--- a/index.html
+++ b/index.html
@@ -125,14 +125,17 @@
         </div>
         <div class="row section-learn-more__row-2">
           <div class="col px-0">
-            <!-- TODO: implement button click handler -->
             <button
+              id="OpenVideo"
               type="button"
               class="section-learn-more__video-button"
-              onclick="openVideo"
             >
               <img src="./images/youtube-brands.png" alt="Play" />
             </button>
+
+            <div class="lightbox">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
         <div class="row mt-6">
