--- a/index.html
+++ b/index.html
@@ -155,18 +155,18 @@
       <div class="container">
         <div class="row mb-4">
           <div class="col flex justify-center items-center px-3">
-            <span class="display-h3 bg-white color-primary px-3 py-3">
+            <span class="reveal to-bottom display-h3 bg-white color-primary px-3 py-3">
               想要培養一技之長，成為前端工程師嗎？
             </span>
           </div>
         </div>
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h2 class="display-h2">第一階段</h2>
+            <h2 class="reveal to-top display-h2">第一階段</h2>
           </div>
         </div>
         <div class="row justify-center items-start mb-3">
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card01.jpg"
               alt=""
@@ -176,7 +176,7 @@
             <h4 class="card-title">程式規劃基礎</h4>
             <p class="card-body">組合語言的描述、分析、設計技巧</p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card02.jpg"
               alt=""
@@ -188,7 +188,7 @@
               具有物件概念的程式設計典範，同時也是一種程式開發的抽象方針
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card02.png"
               alt=""
@@ -203,11 +203,11 @@
         </div>
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h2 class="display-h2">第二階段</h2>
+            <h2 class="reveal to-top display-h2">第二階段</h2>
           </div>
         </div>
         <div class="row justify-center items-start mb-3">
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card04.png"
               alt=""
@@ -219,7 +219,7 @@
               框架以應用為目的，結合了多數常用的元件所形成的初始主體架構
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card05.png"
               alt=""
@@ -231,7 +231,7 @@
               版本控制是維護工程藍圖的標準做法，能追蹤工程藍圖從誕生一直到定案的過程。
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card06.jpg"
               alt=""
@@ -243,7 +243,7 @@
               解決問題、搜集資料、實務應用、團隊合作、知識整合與表達能力。
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card07.jpg"
               alt=""
@@ -255,7 +255,7 @@
               制定規則、剷除阻礙，觀察運作流程，發覺可能的問題，進一步優化流程，讓團隊協作得更順暢。
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card08.jpg"
               alt=""
@@ -270,11 +270,11 @@
         </div>
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h2 class="display-h2">第三階段</h3>
+            <h2 class="reveal to-top display-h2">第三階段</h3>
           </div>
         </div>
         <div class="row justify-center items-start mb-3">
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card09.png"
               alt=""
@@ -286,7 +286,7 @@
               進程、線程是一定要搞懂與掌握的知識點，可以增進程式的執行效率。
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card10.png"
               alt=""
@@ -298,7 +298,7 @@
               全新實用網路新知，完整介紹網路與資料通訊的相關主題與技術。
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card11.png"
               alt=""
@@ -310,7 +310,7 @@
               了解前端領域符合業界使用的進階技巧，並快速辨別使用的領域，加速開發。
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card12.png"
               alt=""
@@ -325,11 +325,11 @@
         </div>
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h2 class="display-h2">第四階段</h2>
+            <h2 class="reveal to-top display-h2">第四階段</h2>
           </div>
         </div>
         <div class="row justify-center items-start mb-3">
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card13.png"
               alt=""
@@ -342,7 +342,7 @@
               應用框架。
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card14.png"
               alt=""
@@ -354,7 +354,7 @@
               能夠在伺服器端運行 JavaScript 的開放原始碼、跨平台執行環境。
             </p>
           </div>
-          <div class="card">
+          <div class="card reveal to-top">
             <img
               src="./images/card15.png"
               alt=""
@@ -384,32 +384,32 @@
       <div class="container">
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h2 class="color-black px-4">培訓成果</h2>
+            <h2 class="reveal to-bottom color-black px-4">培訓成果</h2>
           </div>
         </div>
         <div class="row justify-center items-center">
           <div class="col-12 col-sm-4 text-center mb-4 px-4">
-            <div class="py-4 elevation-2">
+            <div class="reveal to-top py-4 elevation-2">
               <p>
-                <strong class="color-primary font-size-largest">159</strong>
+                <strong class="counting color-primary font-size-largest">159</strong>
                 人
               </p>
               <p>結訓校友</p>
             </div>
           </div>
           <div class="col-12 col-sm-4 text-center mb-4 px-4">
-            <div class="py-4 elevation-2">
+            <div class="reveal to-top py-4 elevation-2">
               <p>
-                <strong class="color-primary font-size-largest">85</strong>
+                <strong class="counting color-primary font-size-largest">85</strong>
                 %
               </p>
               <p>成功轉職率</p>
             </div>
           </div>
           <div class="col-12 col-sm-4 text-center mb-4 px-4">
-            <div class="py-4 elevation-2">
+            <div class="reveal to-top py-4 elevation-2">
               <p>
-                <strong class="color-primary font-size-largest">90</strong>
+                <strong class="counting color-primary font-size-largest">90</strong>
                 %
               </p>
               <p>成為前端工程師</p>
