--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
         </div>
       </div>
     </section>
+    <a id="Fab" href="#Top" class="button button-fab">TOP</a>
     <footer class="footer">
       <div class="container">
         <div class="row">
