--- a/index.html
+++ b/index.html
@@ -46,57 +46,51 @@
     <!-- sign up -->
     <section class="section-signup flex justify-center items-center">
       <div class="container px-0">
-        <div class="row no-gutters">
-          <div class="col-6 col-sm-3 mt-0">
-            <div id="BlockOne" class="block bg-primary color-white text-center">
-              <span class="font-size-larger">優惠活動結束</span>
-              <span class="font-size-large">請再關注我們的優惠時間</span>
+        <div class="row justify-center no-gutters">
+          <div id="BlockOne" class="block bg-primary color-white text-center">
+            <span class="font-size-larger">優惠活動結束</span>
+            <span class="font-size-large">請再關注我們的優惠時間</span>
+          </div>
+          <div id="BlockTwo" class="block flex flex-column order-xs-1 bg-secondary color-white px-5">
+            <div class="stepper-upper-text">
+              <div class="font-size-small left-0"></div>
+              <div class="font-size-small left-34">達34人</div>
+              <div class="font-size-small left-76">達76人</div>
+              <div class="font-size-small left-100">達100人</div>
+            </div>
+            <div class="stepper">
+              <div
+                class="stepper-bar"
+                role="progressbar"
+                style="width: 25%"
+              ></div>
+            </div>
+            <div class="stepper-progress">
+              <!-- TODO: generate steps and assign width classes -->
+              <div class="stepper-progress-step left-0 active"></div>
+              <div class="stepper-progress-step left-34"></div>
+              <div class="stepper-progress-step left-76"></div>
+              <div class="stepper-progress-step left-100"></div>
+            </div>
+            <div class="stepper-lower-text">
+              <div class="font-size-small left-0">預購開始</div>
+              <div class="font-size-small left-34">送 Sass</div>
+              <div class="font-size-small left-76">送 Webpack</div>
+              <div class="font-size-small left-100">送資安課程</div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 order-xs-1 mt-0">
-            <div id="BlockTwo" class="block flex flex-column bg-secondary color-white px-5">
-              <div class="stepper-upper-text">
-                <div class="font-size-small left-0"></div>
-                <div class="font-size-small left-34">達34人</div>
-                <div class="font-size-small left-76">達76人</div>
-                <div class="font-size-small left-100">達100人</div>
-              </div>
-              <div class="stepper">
-                <div
-                  class="stepper-bar"
-                  role="progressbar"
-                  style="width: 25%"
-                ></div>
-              </div>
-              <div class="stepper-progress">
-                <!-- TODO: generate steps and assign width classes -->
-                <div class="stepper-progress-step left-0 active"></div>
-                <div class="stepper-progress-step left-34"></div>
-                <div class="stepper-progress-step left-76"></div>
-                <div class="stepper-progress-step left-100"></div>
-              </div>
-              <div class="stepper-lower-text">
-                <div class="font-size-small left-0">預購開始</div>
-                <div class="font-size-small left-34">送 Sass</div>
-                <div class="font-size-small left-76">送 Webpack</div>
-                <div class="font-size-small left-100">送資安課程</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-sm-3 mt-0">
-            <div id="BlockThree" class="block bg-purple color-white pt-2">
-              <span class="font-size-large">
-                已有
-                <strong id="SignedupCount" class="font-size-largest">70</strong>
-                人報名
-              </span>
-              <button
-                type="button"
-                class="button bg-white color-purple mt-1 px-4"
-              >
-                搶先報名
-              </button>
-            </div>
+          <div id="BlockThree" class="block bg-purple color-white pt-2">
+            <span class="font-size-large">
+              已有
+              <strong id="SignedupCount" class="font-size-largest">70</strong>
+              人報名
+            </span>
+            <button
+              type="button"
+              class="button bg-white color-purple mt-1 px-4"
+            >
+              搶先報名
+            </button>
           </div>
         </div>
       </div>
