--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/index.css">
 
     <script type="module" src="./js/index.js"></script>
   </head>
@@ -381,7 +381,7 @@
             <h2 class="reveal to-bottom color-black px-4">培訓成果</h2>
           </div>
         </div>
-        <div class="row justify-center items-center">
+        <div class="row justify-center items-center mb-4">
           <div class="col-12 col-sm-4 text-center mb-4 px-4">
             <div class="reveal to-top py-4 elevation-2">
               <p>
