lazy lightbox and width fix

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     </section>
     <!-- learn more #1 -->
     <section id="Challenge" class="section-learn-more py-6">
-      <div class="container position-relative px-0">
-        <div class="row section-learn-more__row-1 px-3">
-          <div class="col col-md-6">
+      <div class="container position-relative">
+        <div class="row section-learn-more__row-1">
+          <div class="col-12 col-md-6">
             <h2 class="color-primary mt-1">
               轉職？成為前端工程師？挑戰自我？三個願望一次滿足！
             </h2>
@@ -113,12 +113,12 @@
           </div>
         </div>
         <div class="row section-learn-more__row-background">
-          <div class="col px-0">
+          <div class="col-12 px-0">
             <img src="./images/media_talk.jpg" alt="" />
           </div>
         </div>
         <div class="row section-learn-more__row-2">
-          <div class="col px-0">
+          <div class="col-12">
             <button
               id="OpenVideo"
               type="button"
@@ -128,7 +128,6 @@
             </button>
 
             <div class="lightbox">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
